--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
         Welcome to Peru! 👏🏻
     </h1>
     
+
+
+    <footer>
+        This  project was coded by Karina Smith and is <a href="https://github.com/KarinaV-cyber/peru-travel-project" target="_blank">open-sourced</a>
+    </footer>
 </body>
 </html>
