Added header to the landing page

--- a/index.html
+++ b/index.html
@@ -11,17 +11,23 @@
     <title>Welcome to Peru</title>
 </head>
 <body>
+    <div class="container">
+    <header>
+    <h3>
+     .TRAVEL.
+    </h3>
     <h1>
-        Welcome to Peru! 👏🏻
+        Welcome to Peru! 
     </h1>
     <h2>
         The Wonders of Peru
     </h2>
-    
-
+    <a href="#more">Learn More</a>
+    </header>
 
     <footer>
         This  project was coded by Karina Smith and is <a href="https://github.com/KarinaV-cyber/peru-travel-project" target="_blank">open-sourced</a>
     </footer>
+    </div>
 </body>
 </html>
