Added the main , with image and grid structure

--- a/index.html
+++ b/index.html
@@ -24,9 +24,36 @@
     </h2>
     <a href="#more">Learn More</a>
     </header>
+    <main>
+        <section class="grid grid-2-columns">
+            <div>
+        <img src="images/cusco architecture.jpg" alt="famous cusco building" class="img-responsive"/>
+        </div>
+        <div>
+        <h2>
+            Why Cusco? 
+        </h2>
+        <h3>
+          Cusco, City of the Inca Empire
+        </h3>
+        <p>
+            Reasons to Visit Cusco, The Capital of the Peruvian AndesCusco, Peru, is famous as the ancient capital of the Inca
+            Empire, a gateway to Machu Picchu, and a stunning blend of Incan and Spanish colonial history, known for its unique
+            stone architecture, vibrant markets (like San Pedro), rich Andean culture, and as a base for treks like the Inca Trail.
+            It's a UNESCO World Heritage site celebrated for its historical sites (Sacsayhuaman, Qorikancha), beautiful churches
+            (Cusco Cathedral), artisan neighborhoods (San Blas), Andean textiles, and delicious traditional cuisine.
+        </p>
+        <p>
+            The city features a unique architectural blend, with Spanish colonial buildings, baroque churches, and mansions built
+            directly on top of impressive, earthquake-resistant Inca stone foundations and walls. The Qorikancha (Temple of the
+            Sun), with the Santo Domingo Convent built over it, is a prime example of this historical layering.
+        </p>
+        </div>
+        </section>
+    </main>
 
     <footer>
-        <section class="grid">
+        <section class="grid grid-3-columns-with-first-narrow">
         <div>
         <h3>
             More About Peru
