--- a/index.html
+++ b/index.html
@@ -131,6 +131,28 @@
         </div>
 
         </section>
+        <section>
+            <h2 class="text-center">
+                Gallery
+            </h2>
+            <h3 class="text-center">
+                My photos from Peru
+            </h3>
+            <div class="photos-peru">
+            <div class="grid grid-3-columns">
+                <img src="images/Photo-1.jpg" alt=" " class="img-responsive-1"/>
+                <img src="images/Photo-2.jpg" alt=" " class ="img-responsive-1"/>
+                <img src="images/Photo-3.jpg" alt=" " class="img-responsive-1"/>
+                        </div>
+                        <div class="photos-peru">
+        <div class="grid grid-3-columns">
+            <img src="images/Photo-4.jpg" alt=" " class="img-responsive-1" />
+            <img src="images/Photo-5.jpg" alt=" " class="img-responsive-1" />
+            <img src="images/Photo-6.jpg" alt=" " class="img-responsive-1" />
+        </div>
+        </div>
+            </div>
+        </section>
     </main>
 
     <footer>
