Added some finishing touches

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </div>
         <div>
         <h2>
+            <a name="more"></a>
             Why Cusco? 
         </h2>
         <h3>
